fix: 🐞 add white color to .h-96px class for better visibility

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -146,6 +146,7 @@ pre {
 .h-96px {
   height: 72px;
   overflow-y: hidden;
+  color:white
 }
 
 .breadcrumb{
